Update my certificates

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/thesis_certificate.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/thesis_certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/thesis_certificate.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="NLP Research"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -521,7 +521,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/BasicDeepLearning.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/BasicDeepLearning.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/BasicDeepLearning.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Basic Deep Learning Certificate"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -531,7 +531,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/building_recommendation_engine.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/building_recommendation_engine.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/building_recommendation_engine.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recommendation System"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -541,7 +541,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/DataEngineeringForEveryone.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/DataEngineeringForEveryone.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/DataEngineeringForEveryone.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Data Engineering"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -551,7 +551,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/Md Shihab Uddin - Computer Vision.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/Md Shihab Uddin - Computer Vision.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/Md Shihab Uddin - Computer Vision.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Computer Vision"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -561,7 +561,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/Md Shihab Uddin - Intermediate Machine Learning.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/Md Shihab Uddin - Intermediate Machine Learning.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/Md Shihab Uddin - Intermediate Machine Learning.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Intermediate Machine Learning"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -571,7 +571,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/nn_deepLearning.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/nn_deepLearning.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/nn_deepLearning.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Neural Network"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -581,7 +581,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/python_intermeduate_certification.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/python_intermeduate_certification.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/python_intermeduate_certification.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Python"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -591,16 +591,16 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/pythonDataStructure.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/pythonDataStructure.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/pythonDataStructure.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Python Data Structure"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-LD">
             <div class="portfolio-wrap">
-              <img src="assets/img/certificates/Comilla University IT SocietyfromCKH.jpg" class="img-fluid" alt="">
+              <img src="assets/img/certificates/president_couits.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/Comilla University IT SocietyfromCKH.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/president_couits.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="President CoUITS"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -609,7 +609,36 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certificates/Improving_deep_Neural_Network.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/certificates/Improving_deep_Neural_Network.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/certificates/Improving_deep_Neural_Network.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Deep Neural Network"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-LD">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certificates/Joint_Secretary.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/certificates/Joint_Secretary.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Joint Secretary ICT Association"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-SE">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certificates/pathway_to_SE.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/certificates/pathway_to_SE.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pathway to Software Engineering"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-LD">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certificates/self_esteem.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/certificates/self_esteem.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Self Esteem"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
