--- a/index.html
+++ b/index.html
@@ -473,7 +473,14 @@
             <!-- Certification section end -->
             <!-- Language section Start -->
             <h3 class="resume-title">Language Proficiency</h3>
-            <div class="resume-item"><h6><b>English</b><em>, Professional</em></h6></div>
+            <div class="resume-item"><h6><b>English</b><em>, Overall 6.5</em></h6>
+            <ul>
+              <li><b>Speaking</b>     <em>7.0</em></li>
+              <li><b>Reading</b>      <em>6.5</em></li>
+              <li><b>Listening</b>    <em>6.5</em></li>
+              <li><b>Writing</b>      <em>6.0</em></li>
+            </ul>
+            </div>
             <div class="resume-item"><h6><b>Bangla</b><em>, Native</em></h6></div>
             <!-- Language section End -->
           </div>
