Update education section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#education" class="nav-link scrollto"><i class="bx bx-book-open"></i> <span>Education</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certificates</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
@@ -125,6 +126,78 @@
 
       </div>
     </section><!-- End About Section -->
+<!--  Start Education Section -->
+    <section id="education" class="education">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Education</h2>
+<!--          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
+        </div>
+
+        <div class="row">
+          <div class="icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-book"></i></div>
+            <h4 class="title"><a href="">Bachelor Of Science in Information and Communication Technology</a></h4>
+            <div class="education-item">
+<!--              <h4>Bachelor of Science in ICT</h4>-->
+              <h5>2016 - 2020</h5>
+              <p><em>Comilla University, Comilla </em></p>
+              <p>CGPA : <b>3.70/4.00</b></p>
+            </div>
+
+            <div class="icon"><i class="bi bi-book"></i></div>
+            <h4 class="title"><a href="">HIGHER SCHOOL CERTIFICATE</a></h4>
+            <div class="education-item">
+<!--              <h4>Bachelor of Science in ICT</h4>-->
+              <h5>2012 - 2014</h5>
+              <p><em>Comilla Government College, Comilla</em></p>
+              <p>CGPA : <b>4.50/5.00</b></p>
+            </div>
+
+            <div class="icon"><i class="bi bi-book"></i></div>
+            <h4 class="title"><a href="">SECONDARY SCHOOL CERTIFICATE</a></h4>
+            <div class="education-item">
+<!--              <h4>Bachelor of Science in ICT</h4>-->
+              <h5>2006-2012</h5>
+              <p><em>Amratali C, Ali High School, Comilla</em></p>
+              <p>CGPA : <b>5.00/5.00</b></p>
+            </div>
+            <div>
+<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">-->
+<!--            <div class="icon"><i class="bi bi-briefcase"></i></div>-->
+<!--            <h4 class="title"><a href="https://huggingface.co/shihab17/bangla-sentence-transformer">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation</a></h4>-->
+<!--            <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.(Writing on going)</p>-->
+<!--          </div>-->
+<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">-->
+<!--            <div class="icon"><i class="bi bi-card-checklist"></i></div>-->
+<!--            <h4 class="title"><a href="">Dolor Sitema</a></h4>-->
+<!--            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>-->
+<!--          </div>-->
+<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">-->
+<!--            <div class="icon"><i class="bi bi-bar-chart"></i></div>-->
+<!--            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>-->
+<!--            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>-->
+<!--          </div>-->
+<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">-->
+<!--            <div class="icon"><i class="bi bi-binoculars"></i></div>-->
+<!--            <h4 class="title"><a href="">Magni Dolores</a></h4>-->
+<!--            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>-->
+<!--          </div>-->
+<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">-->
+<!--            <div class="icon"><i class="bi bi-brightness-high"></i></div>-->
+<!--            <h4 class="title"><a href="">Nemo Enim</a></h4>-->
+<!--            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
+<!--          </div>-->
+<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">-->
+<!--            <div class="icon"><i class="bi bi-calendar4-week"></i></div>-->
+<!--            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>-->
+<!--            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>-->
+<!--          </div>-->
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
 
     <!-- ======= Facts Section ======= -->
     <!-- <section id="facts" class="facts">
@@ -304,25 +377,15 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Professional Experience</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <!-- <h3 class="resume-title">Summary</h3>
-            <div class="resume-item pb-0">
-              <h4>Md Shihab Uddin</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Uttara, Dhaka</li>
-                <li>+880 169 0087078</li>
-                <li>shihabuddin.ict@gmail.com</li>
-              </ul>
-            </div> -->
-            <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Silicon Orchard - Senior Software Engineer</h4>
+              <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
+              <br></br>
               <h5>July 2023 - Present</h5>
               <!-- <p><em>Mirpur. Dhaka </em></p> -->
               <ul>
@@ -351,7 +414,8 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Technometrics Limited — Software Engineer (NLP)</h4>
+              <h4>Software Engineer (NLP)</h4><em>Technometrics Limited</em>
+              <br></br>
               <h5>June 2022 - June 2023</h5>
               <!-- <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
               <ul>
@@ -373,8 +437,12 @@
 
               </ul>
             </div>
+          </div>
+          <!-- Education section -->
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="resume-item">
-              <h4>Ishraak Solutions Limited — Junior Machine Learning</h4>
+              <h4>Junior Machine Learning</h4><em>Ishraak Solutions Limited</em>
+              <br></br>
               <h5>Dec 2020 - May 2022</h5>
               <!-- <p><em>Stepping Stone Advertising, New York, NY</em></p> -->
               <ul>
@@ -398,50 +466,32 @@
 
               </ul>
             </div>
-           
-          </div>
-          <!-- Education section -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            
-            <h3 class="resume-title">Education</h3>
-<!--            <div class="resume-item">-->
-<!--              <h4>Master in ICT</h4>-->
-<!--              <h5>2020 - 2021</h5>-->
-<!--              <p><em>Comilla University, Comilla </em></p>-->
-<!--              <p>CGPA : <b>3.50</b></p>-->
-<!--            </div>-->
-            <div class="resume-item">
-              <h4>Bachelor of Science in ICT</h4>
-              <h5>2016 - 2020</h5>
-              <p><em>Comilla University, Comilla </em></p>
-              <p>CGPA : <b>3.70</b></p>
-            </div>
-            <div class="resume-item">
-              <h4>Higher School Certificate</h4>
-              <h5>2012 - 2014</h5>
-              <p><em>Comilla Government College, Comilla </em></p>
-              <p>CGPA : <b>4.50</b></p>
-            </div>
-            <div class="resume-item">
-              <h4>Secondary School Certificate</h4>
-              <h5>2012</h5>
-              <p><em>Amratali C, Ali High School, Comilla </em></p>
-              <p>CGPA : <b>5.00</b></p>
-            </div>
             <!-- Extra Caricular Activites -->
             <h3 class="resume-title">Extra Caricular Activites</h3>
             <div class="resume-item">
               <h6><b>President</b><em>, Comilla University IT Soceity</em></h6>
-              <p>2020 - 2021</p>
+              <h5>2020 - 2021</h5>
             </div>
             <div class="resume-item">
               <h6><b>Joint Secretary</b><em>, ICT Association, Dept. Of ICT</em></h6>
-              <p>2019 - 2020</p>
+              <h5>2019 - 2020</h5>
             </div>
             <div class="resume-item">
               <h6><b>Radio Jockey</b><em>, RadioCou</em></h6>
-              <p>2018 - 2020</p>
+              <h5>2018 - 2020</h5>
             </div>
+            <h3 class="resume-title">Language Proficiency</h3>
+            <div class="resume-item"><h6><b>English</b><em>, Overall 6.5</em></h6>
+            <ul>
+              <li><b>Speaking</b>     <em>7.0</em></li>
+              <li><b>Reading</b>      <em>6.5</em></li>
+              <li><b>Listening</b>    <em>6.5</em></li>
+              <li><b>Writing</b>      <em>6.0</em></li>
+            </ul>
+            </div>
+            <div class="resume-item"><h6><b>Bangla</b><em>, Native</em></h6></div>
+          </div>
+
             <!-- Certification section -->
 <!--            <h3 class="resume-title">Certification</h3>-->
 <!--            <div class="resume-item">-->
@@ -472,16 +522,7 @@
 <!--            </div>-->
             <!-- Certification section end -->
             <!-- Language section Start -->
-            <h3 class="resume-title">Language Proficiency</h3>
-            <div class="resume-item"><h6><b>English</b><em>, Overall 6.5</em></h6>
-            <ul>
-              <li><b>Speaking</b>     <em>7.0</em></li>
-              <li><b>Reading</b>      <em>6.5</em></li>
-              <li><b>Listening</b>    <em>6.5</em></li>
-              <li><b>Writing</b>      <em>6.0</em></li>
-            </ul>
-            </div>
-            <div class="resume-item"><h6><b>Bangla</b><em>, Native</em></h6></div>
+
             <!-- Language section End -->
           </div>
 
