Update education section

--- a/index.html
+++ b/index.html
@@ -138,30 +138,33 @@
         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title"><a href="">Bachelor Of Science in Information and Communication Technology</a></h4>
+            <h4 class="title">Bachelor Of Science in Information and Communication Technology</h4>
             <div class="education-item">
 <!--              <h4>Bachelor of Science in ICT</h4>-->
               <h5>2016 - 2020</h5>
               <p><em>Comilla University, Comilla </em></p>
               <p>CGPA : <b>3.70/4.00</b></p>
             </div>
-
+          </div>
+          <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title"><a href="">HIGHER SCHOOL CERTIFICATE</a></h4>
+            <h4 class="title">HIGHER SCHOOL CERTIFICATE</h4>
             <div class="education-item">
 <!--              <h4>Bachelor of Science in ICT</h4>-->
               <h5>2012 - 2014</h5>
               <p><em>Comilla Government College, Comilla</em></p>
               <p>CGPA : <b>4.50/5.00</b></p>
             </div>
-
+          </div>
+          <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title"><a href="">SECONDARY SCHOOL CERTIFICATE</a></h4>
+            <h4 class="title">SECONDARY SCHOOL CERTIFICATE</h4>
             <div class="education-item">
 <!--              <h4>Bachelor of Science in ICT</h4>-->
               <h5>2006-2012</h5>
               <p><em>Amratali C, Ali High School, Comilla</em></p>
               <p>CGPA : <b>5.00/5.00</b></p>
+            </div>
             </div>
             <div>
 <!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">-->
@@ -438,7 +441,7 @@
               </ul>
             </div>
           </div>
-          <!-- Education section -->
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="resume-item">
               <h4>Junior Machine Learning</h4><em>Ishraak Solutions Limited</em>
