--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
               <p>CGPA : <b>3.70/4.00</b></p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
             <h4 class="title">HIGHER SCHOOL CERTIFICATE</h4>
@@ -156,49 +158,20 @@
               <p>CGPA : <b>4.50/5.00</b></p>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title">SECONDARY SCHOOL CERTIFICATE</h4>
-            <div class="education-item">
-<!--              <h4>Bachelor of Science in ICT</h4>-->
-              <h5>2006-2012</h5>
-              <p><em>Amratali C, Ali High School, Comilla</em></p>
-              <p>CGPA : <b>5.00/5.00</b></p>
+              <h4 class="title">SECONDARY SCHOOL CERTIFICATE</h4>
+              <div class="education-item">
+  <!--              <h4>Bachelor of Science in ICT</h4>-->
+                <h5>2006-2012</h5>
+                <p><em>Amratali C, Ali High School, Comilla</em></p>
+                <p>CGPA : <b>5.00/5.00</b></p>
+              </div>
             </div>
-            </div>
-            <div>
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">-->
-<!--            <div class="icon"><i class="bi bi-briefcase"></i></div>-->
-<!--            <h4 class="title"><a href="https://huggingface.co/shihab17/bangla-sentence-transformer">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation</a></h4>-->
-<!--            <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.(Writing on going)</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">-->
-<!--            <div class="icon"><i class="bi bi-card-checklist"></i></div>-->
-<!--            <h4 class="title"><a href="">Dolor Sitema</a></h4>-->
-<!--            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">-->
-<!--            <div class="icon"><i class="bi bi-bar-chart"></i></div>-->
-<!--            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>-->
-<!--            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">-->
-<!--            <div class="icon"><i class="bi bi-binoculars"></i></div>-->
-<!--            <h4 class="title"><a href="">Magni Dolores</a></h4>-->
-<!--            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">-->
-<!--            <div class="icon"><i class="bi bi-brightness-high"></i></div>-->
-<!--            <h4 class="title"><a href="">Nemo Enim</a></h4>-->
-<!--            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">-->
-<!--            <div class="icon"><i class="bi bi-calendar4-week"></i></div>-->
-<!--            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>-->
-<!--            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>-->
-<!--          </div>-->
+          <div>
         </div>
-
       </div>
     </section><!-- End Services Section -->
 
