--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
         <img src="assets/img/shihab.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Md. Shihab Uddin</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/shihab.uddin17" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/farhanshihab/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+<!--          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
+          <a href="https://github.com/shihabict" target="_blank" class="twitter"><i class="bx bxl-github"></i></a>
+          <a href="https://www.facebook.com/shihab.uddin17" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/farhan_shihab/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+<!--          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
+          <a href="https://www.linkedin.com/in/farhanshihab/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
