--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-book-open"></i> <span>Education</span></a></li>
+          <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-badge-check"></i> <span>Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Certificates</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Publications</span></a></li>
