--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+<!--          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>-->
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-book-open"></i> <span>Education</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-badge-check"></i> <span>Skills</span></a></li>
