--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Md Shihab Uddin</h1>
-      <p><span class="typed" data-typed-items="Senior Software Engineer | AI | ML | Coversational AI"></span></p>
+      <p><span class="typed" data-typed-items="Aspiring PhD Student | Senior AI Engineer | NLP | Computer Vision | Coversational AI"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -100,7 +100,7 @@
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
             <h3>Senior Software Engineer</h3>
             <p class="fst-italic">
-              As a software engineer specializing in natural language processing (NLP), I have a passion for developing cutting-edge technologies that can help people communicate more effectively. With experience in Python, C++, Java, and C, I have a diverse skill set that allows me to tackle complex problems with ease.
+              As a software engineer specializing in natural language processing (NLP) and computer vision, I have a passion for developing cutting-edge technologies that can help people communicate more effectively. With experience in Python, C++, Java, and C, I have a diverse skill set that allows me to tackle complex problems with ease.
             </p>  
             <div class="row">
               <div class="col-lg-6">
@@ -112,7 +112,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science in ICT</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science in ICT</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>linkedin:</strong> <span>https://www.linkedin.com/in/farhanshihab/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 August 1996</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
@@ -137,6 +137,18 @@
 <!--          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
 
+        <div class="row">
+          <div class="icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-book"></i></div>
+            <h4 class="title">Master Of Science in Information and Communication Technology</h4>
+            <div class="education-item">
+<!--              <h4>Bachelor of Science in ICT</h4>-->
+              <h5>2021 - 2022</h5>
+              <p><em>Comilla University, Comilla </em></p>
+              <p>CGPA : <b>3.54/4.00</b></p>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
@@ -692,39 +704,15 @@
           </div>
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation</a></h4>
-            <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.(Writing on going)</p>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection (Under Review)</a></h4>
+            <p class="description">This study adopts an exploratory approach to address the problem of emotional classification by leveraging machine learning (ML) techniques on both textual and auditory data sources.
+              We develop a comprehensive pipeline that processes and analyzes textual and auditory inputs, leading to more accurate and dependable emotion classification. </p>
           </div>
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">-->
-<!--            <div class="icon"><i class="bi bi-briefcase"></i></div>-->
-<!--            <h4 class="title"><a href="https://huggingface.co/shihab17/bangla-sentence-transformer">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation</a></h4>-->
-<!--            <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.(Writing on going)</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">-->
-<!--            <div class="icon"><i class="bi bi-card-checklist"></i></div>-->
-<!--            <h4 class="title"><a href="">Dolor Sitema</a></h4>-->
-<!--            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">-->
-<!--            <div class="icon"><i class="bi bi-bar-chart"></i></div>-->
-<!--            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>-->
-<!--            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">-->
-<!--            <div class="icon"><i class="bi bi-binoculars"></i></div>-->
-<!--            <h4 class="title"><a href="">Magni Dolores</a></h4>-->
-<!--            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">-->
-<!--            <div class="icon"><i class="bi bi-brightness-high"></i></div>-->
-<!--            <h4 class="title"><a href="">Nemo Enim</a></h4>-->
-<!--            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>-->
-<!--          </div>-->
-<!--          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">-->
-<!--            <div class="icon"><i class="bi bi-calendar4-week"></i></div>-->
-<!--            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>-->
-<!--            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>-->
-<!--          </div>-->
+          <div class="icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation (Under Review)</a></h4>
+            <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.</p>
+          </div>
         </div>
 
       </div>
