--- a/index.html
+++ b/index.html
@@ -705,12 +705,11 @@
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection (Under Review)</a></h4>
-            <p class="description">This study adopts an exploratory approach to address the problem of emotional classification by leveraging machine learning (ML) techniques on both textual and auditory data sources.
-              We develop a comprehensive pipeline that processes and analyzes textual and auditory inputs, leading to more accurate and dependable emotion classification. </p>
+            <p class="description">Ariful Haque, M., George, R., Hossain Rifat, R., <b>Md. Shihab Uddin</b>, M., Kamal, M., & Datta Gupta, K. (2024, June). A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection. In Proceedings of the 17th International Conference on PErvasive Technologies Related to Assistive Environments (pp. 375-381).</p>
           </div>
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation (Under Review)</a></h4>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation (Accepted)</a></h4>
             <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.</p>
           </div>
         </div>
