--- a/index.html
+++ b/index.html
@@ -699,6 +699,11 @@
         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation (Accepted)</a></h4>
+            <p class="description"><br>M. S. Uddin</br>, M. A. Haque, R. H. Rifat, M. Kamal, K. D. Gupta and R. George, "Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation," 2024 IEEE 15th Annual Ubiquitous Computing, Electronics & Mobile Communication Conference (UEMCON), Yorktown Heights, NY, USA, 2024, pp. 495-500, doi: 10.1109/UEMCON62879.2024.10754765.</p>
+          </div>
+          <div class="icon-box" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="https://huggingface.co/shihab17/bangla-sentence-transformer">Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA</a></h4>
             <p class="description">P. C. Paul, <b>Md. Shihab Uddin</b>, M. T. Ahmed, M. Moshiul Hoque and M. Rahman,     "Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA," 2022 25th International Conference on Computer and Information Technology (ICCIT), Cox's Bazar, Bangladesh, 2022, pp. 512-516, doi: 10.1109/ICCIT57492.2022.10055173.</p>
           </div>
@@ -706,11 +711,6 @@
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection (Under Review)</a></h4>
             <p class="description">Ariful Haque, M., George, R., Hossain Rifat, R., <b>Md. Shihab Uddin</b>, M., Kamal, M., & Datta Gupta, K. (2024, June). A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection. In Proceedings of the 17th International Conference on PErvasive Technologies Related to Assistive Environments (pp. 375-381).</p>
-          </div>
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation (Accepted)</a></h4>
-            <p class="description">In this project, I used the knowledge distillation technique to address the deficiency of sentence embedding in Bangla language.</p>
           </div>
         </div>
 
