--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge distillation (Accepted)</a></h4>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge Distillation</a></h4>
             <p class="description"><b>M. S. Uddin</b>, M. A. Haque, R. H. Rifat, M. Kamal, K. D. Gupta and R. George, "Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation," 2024 IEEE 15th Annual Ubiquitous Computing, Electronics & Mobile Communication Conference (UEMCON), Yorktown Heights, NY, USA, 2024, pp. 495-500, doi: 10.1109/UEMCON62879.2024.10754765.</p>
           </div>
           <div class="icon-box" data-aos="fade-up">
