Update publication links

--- a/index.html
+++ b/index.html
@@ -699,17 +699,17 @@
         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">Bangla SBERT - Sentence Embedding Using multilingual knowledge Distillation</a></h4>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10754765">Bangla SBERT - Sentence Embedding Using multilingual knowledge Distillation</a></h4>
             <p class="description"><b>M. S. Uddin</b>, M. A. Haque, R. H. Rifat, M. Kamal, K. D. Gupta and R. George, "Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation," 2024 IEEE 15th Annual Ubiquitous Computing, Electronics & Mobile Communication Conference (UEMCON), Yorktown Heights, NY, USA, 2024, pp. 495-500, doi: 10.1109/UEMCON62879.2024.10754765.</p>
           </div>
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://huggingface.co/shihab17/bangla-sentence-transformer">Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA</a></h4>
+            <h4 class="title"><a href="https://ieeexplore.ieee.org/document/10055173">Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA</a></h4>
             <p class="description">P. C. Paul, <b>Md. Shihab Uddin</b>, M. T. Ahmed, M. Moshiul Hoque and M. Rahman,     "Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA," 2022 25th International Conference on Computer and Information Technology (ICCIT), Cox's Bazar, Bangladesh, 2022, pp. 512-516, doi: 10.1109/ICCIT57492.2022.10055173.</p>
           </div>
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10055173">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection (Under Review)</a></h4>
+            <h4 class="title"><a href="https://dl.acm.org/doi/10.1145/3652037.3663943">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection</a></h4>
             <p class="description">Ariful Haque, M., George, R., Hossain Rifat, R., <b>Md. Shihab Uddin</b>, M., Kamal, M., & Datta Gupta, K. (2024, June). A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection. In Proceedings of the 17th International Conference on PErvasive Technologies Related to Assistive Environments (pp. 375-381).</p>
           </div>
         </div>
