--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Md Shihab Uddin</h1>
-      <p><span class="typed" data-typed-items="Aspiring PhD Student | Senior AI Engineer | NLP | Computer Vision | Coversational AI"></span></p>
+      <p><span class="typed" data-typed-items="PhD Student | Senior AI Engineer | NLP | Computer Vision | Coversational AI"></span></p>
     </div>
   </section><!-- End Hero -->
 
