--- a/index.html
+++ b/index.html
@@ -100,9 +100,13 @@
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
             <h3>Senior Software Engineer</h3>
             <p class="fst-italic">
-              As a software engineer specializing in natural language processing (NLP) and computer vision, I have a passion for developing cutting-edge technologies that can help people communicate more effectively. With experience in Python, C++, Java, and C, I have a diverse skill set that allows me to tackle complex problems with ease.
+              I’m a PhD researcher in Computer Engineering at the University of Alabama in Huntsville, specializing in reinforcement learning, intelligent transportation systems, and natural language processing. With 4+ years of industry experience as an AI/NLP engineer, I’ve led projects ranging from Bangla language model development and ASR optimization to vector-based retrieval systems using large language models (LLMs) and ChromaDB.
+
+              My early work focused on building practical NLP solutions — including a BERT-powered resume extractor, job recommendation engines, and a custom Bangla sentence transformer. In my current research, I’m applying deep reinforcement learning to real-world mobility challenges like car-following modeling and traffic control. I’m also exploring how LLMs can be used to make transportation systems more context-aware, such as summarizing incident reports or extracting actionable insights from unstructured traffic data.
+
+              I enjoy working at the intersection of applied AI and real-world systems, and I’m always open to collaboration — whether in research, open source, or industry R&D. Feel free to connect!I’m a PhD researcher in Computer Engineering at the University of Alabama in Huntsville, specializing in reinforcement learning, intelligent transportation systems, and natural language processing. With 4+ years of industry experience as an AI/NLP engineer, I’ve led projects ranging from Bangla language model development and ASR optimization to vector-based retrieval systems using large language models (LLMs) and ChromaDB. My early work focused on building practical NLP solutions — including a BERT-powered resume extractor, job recommendation engines, and a custom Bangla sentence transformer. In my current research, I’m applying deep reinforcement learning to real-world mobility challenges like car-following modeling and traffic control. I’m also exploring how LLMs can be used to make transportation systems more context-aware, such as summarizing incident reports or extracting actionable insights from unstructured traffic data. I enjoy working at the intersection of applied AI and real-world systems, and I’m always open to collaboration — whether in research, open source, or industry R&D. Feel free to connect!
             </p>  
-            <div class="row">
+<!--             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Gmail:</strong> <span>shihabuddin.ict@gmail.com</span></li>
@@ -117,7 +121,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 August 1996</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 </ul>
-              </div>
+              </div> -->
             <!-- </div>
             <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
