--- a/index.html
+++ b/index.html
@@ -165,30 +165,30 @@
             </div>
           </div>
         </div>
-        <div class="row">
+<!--         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
             <h4 class="title">HIGHER SCHOOL CERTIFICATE</h4>
             <div class="education-item">
 <!--              <h4>Bachelor of Science in ICT</h4>-->
-              <h5>2012 - 2014</h5>
+<!--               <h5>2012 - 2014</h5>
               <p><em>Comilla Government College, Comilla</em></p>
               <p>CGPA : <b>4.50/5.00</b></p>
             </div>
-          </div>
-        </div>
-        <div class="row">
+          </div>  -->
+<!--         </div> -->
+<!--         <div class="row">
           <div class="icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-book"></i></div>
               <h4 class="title">SECONDARY SCHOOL CERTIFICATE</h4>
               <div class="education-item">
   <!--              <h4>Bachelor of Science in ICT</h4>-->
-                <h5>2006-2012</h5>
+<!--                 <h5>2006-2012</h5>
                 <p><em>Amratali C, Ali High School, Comilla</em></p>
                 <p>CGPA : <b>5.00/5.00</b></p>
               </div>
-            </div>
-          <div>
+            </div> -->
+<!--           <div> -->
         </div>
       </div>
     </section><!-- End Services Section -->
