--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <!--          </div>-->
           <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
-            <h3>Senior Software Engineer</h3>
+            <!-- <h3>Senior Software Engineer</h3> -->
             <p class="fst-italic">
               I’m a PhD researcher in Computer Engineering at the University of Alabama in Huntsville, specializing in reinforcement learning, intelligent transportation systems, and natural language processing. With 4+ years of industry experience as an AI/NLP engineer, I’ve led projects ranging from Bangla language model development and ASR optimization to vector-based retrieval systems using large language models (LLMs) and ChromaDB.
 
@@ -120,8 +120,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>linkedin:</strong> <span>https://www.linkedin.com/in/farhanshihab/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 August 1996</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
-                </ul>
-              </div> -->
+                <!-- </ul> -->
+              <!-- </div> --> -->
             <!-- </div>
             <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
@@ -189,7 +189,7 @@
               </div>
             </div> -->
 <!--           <div> -->
-        </div>
+        <!-- </div> -->
       </div>
     </section><!-- End Services Section -->
 
