--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 August 1996</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
                 <!-- </ul> -->
-              <!-- </div> --> -->
+              <!-- </div> -->
             <!-- </div>
             <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
