--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
-<!--  <link href="assets/img/favicon.png" rel="icon">-->
-<!--  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">-->
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -27,13 +23,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Updated: Jul 27 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -55,6 +44,9 @@
           <a href="https://www.instagram.com/farhan_shihab/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
 <!--          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
           <a href="https://www.linkedin.com/in/farhanshihab/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://scholar.google.com/citations?user=9CZyAU0AAAAJ&hl=en&oi=sra" target="_blank"><i class="bx bxl-google"></i></a>
+
+
         </div>
       </div>
 
@@ -100,28 +92,7 @@
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
             <!-- <h3>Senior Software Engineer</h3> -->
             <p class="fst-italic">
-             PhD researcher in Computer Engineering at UAH, working at the intersection of reinforcement learning, NLP, and intelligent transportation systems. I combine academic research and 4+ years of industry experience to build AI solutions for mobility, language, and real-world data.</p>  
-<!--             <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Gmail:</strong> <span>shihabuddin.ict@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+880 1690 087078</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Uttara, Dhaka</span></li>
-                </ul>  
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science in ICT</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>linkedin:</strong> <span>https://www.linkedin.com/in/farhanshihab/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 August 1996</span></li>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
-                <!-- </ul> -->
-              <!-- </div> -->
-            <!-- </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p> -->
+             PhD researcher in Computer Engineering at UAH, working at the intersection of reinforcement learning, NLP, and intelligent transportation systems. I combine academic research and 4+ years of industry experience to build AI solutions for mobility, language, and real-world data.</p>
           </div>
         </div>
 
